--- a/configs/starship.toml
+++ b/configs/starship.toml
@@ -3,4 +3,8 @@ add_newline = false
 
 [cmd_duration]
 min_time = 500
-format = '\(took [$duration](bold yellow)\)'
+format = '\[took [$duration](bold yellow)\]'
+
+[[battery.display]]
+threshold = 20
+style = 'bold red'
